objects/PC_OcrQueue__c.object
<CustomObject>
    <description>Stores information regarding document queued for the OCR service</description>
    <fields>
        <fullName>PC_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the document is ready for OCR.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_NotifyStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the queued document needs notification on completion of the OCR.</description>
        <inlineHelpText>Specifies whether the queued document needs notification on completion of the OCR. Selecting the checkbox will send the notification on completion of OCR Performed on the document.</inlineHelpText>
        <label>Notify Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_OcrTemplateType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template type of the queued up source document</description>
        <label>OCR Template Type</label>
        <referenceTo>PC_OcrTemplateType__c</referenceTo>
        <relationshipLabel>OCR Queue</relationshipLabel>
        <relationshipName>OCR_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SourceContentId__c</fullName>
        <description>Id of the Document Content Version or Attachment</description>
        <label>Source Content Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SourceDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the PC Document which queued for OCR.</description>
        <label>Source Document</label>
        <referenceTo>PC_Document__c</referenceTo>
        <relationshipLabel>OCR Queue</relationshipLabel>
        <relationshipName>OCR_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SourceRecord__c</fullName>
        <description>Id of the source record (If different from PC_Document)</description>
        <inlineHelpText>Id of the source record (If different from PC_Document)</inlineHelpText>
        <label>Source Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <description>Current state of the extraction process.</description>
        <inlineHelpText>Current state of the extraction process.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OCR Queue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OCRQ-{00000000}</displayFormat>
        <label>OCR Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCR Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>